# Doom64EX-Classic

./: .gitignore  AUTHORS  README.md
lib/: SDL3_net.lib  fluidsynth.lib  liblibpng15.so.15  liblibpng15.so.15.14.0  libpng15.lib
lib/lpng1514/: CMakeLists.txt
src/blam/src/: common.c
src/kex/: .w_wad.h.kate-swp  CMakeLists.txt  am_draw.c  am_map.c  am_map.h  con_console.c  con_cvar.h  d_devstat.h  d_event.h  d_main.c  d_net.c  d_net.h  dgl.c  dgl.h  doomdata.h  doomdef.h  doomtype.h  f_finale.c  g_actions.c  g_actions.h  g_controls.h  g_demo.h  g_game.c  g_settings.c  gl_draw.c  gl_main.c  gl_main.h  gl_texture.c  i_audio.c  i_main.c  i_opndir.h  i_png.c  i_png.h  i_swap.h  i_system.c  i_video.c  i_video.h  info.h  m_cheat.c  m_fixed.c  (+28 more)
src/kex/Ext/: md5.c  md5.h
src/kex/Ext/ChocolateDoom/: net_client.c  net_client.h  net_common.c  net_dedicated.c  net_defs.h  net_io.c  net_loop.c  net_packet.c  net_query.c  net_sdl.c  net_server.c  net_server.h  net_structrw.c  net_structrw.h
src/launcher/: Launcher.c  Launcher.h  Launcher.rc  tk_lib.c
src/wadgen/: CMakeLists.txt  DeflateN64.c  Files.c  Files.h  Gfx.c  Gfx.h  Level.c  Level.h  MD5.c  Mem.c  Png.c  Rom.c  Rom.h  SndFont.c  SndFont.h  Sound.c  Sound.h  Sprite.c  Sprite.h  Texture.c  Texture.h  Wad.c  Wad.h  WadGen.c  WadGen.h  WadGen.rc  resource.h
